--- a/Models/CatBoost.ipynb
+++ b/Models/CatBoost.ipynb
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "5e7d3306",
    "metadata": {},
    "outputs": [
@@ -174,19 +174,7 @@
    ],
    "source": [
     "plt.figure(figsize=(6, 6))\n",
-    "plt.scatter(y_test, y_test_pred, alpha=0.7)\n",
-    "\n",
-    "lims = [min(y_test.min(), y_test_pred.min()),\n",
-    "        max(y_test.max(), y_test_pred.max())]\n",
-    "plt.plot(lims, lims)  \n",
-    "plt.xlim(lims)\n",
-    "plt.ylim(lims)\n",
-    "\n",
-    "plt.xlabel(\"Actual price\")\n",
-    "plt.ylabel(\"Predicted price\")\n",
-    "plt.title(\"CatBoost — Actual vs Predicted (Test)\")\n",
-    "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.scatter(y_test, y_test_pred, alpha=0.7)"
    ]
   },
   {
